[package]
name = "cfloader-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cfloader"
path = "src/bin/cfloader.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.0", features = ["derive"] }
cfloader = { path = "../cfloader" }
indicatif = "0.18.0"
tokio = { version = "1.46.1", features = ["full"] }
