[package]
name = "cfloader"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cfloader"
path = "src/bin/cfloader.rs"

[[bin]]
name = "flash_verify"
path = "src/bin/flash_verify.rs"

[[bin]]
name = "dual_flash_verify"
path = "src/bin/dual_flash_verify.rs"

[[bin]]
name = "flash_and_verify"
path = "src/bin/flash_and_verify.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.0", features = ["derive"] }
crazyradio = { version = "0.3.0", features = ["async", "shared_radio"] }
indicatif = "0.17"
tokio = { version = "1.46.1", features = ["full"] }
